--- a/angular.json
+++ b/angular.json
@@ -110,6 +110,10 @@
               "devServerTarget": "learn-a-lang:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
